@@ -11,6 +11,7 @@ import java.lang.System.Logger.Level;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 
 import net.java.sen.Token;
 import vavi.speech.modifier.yakuwarigo.Feature;
@@ -170,14 +171,14 @@ public class SalomeProvider implements Provider {
         int e = randomizer.exclamationMarkCount();
 
         StringBuilder suffix = new StringBuilder();
-        suffix.append("～".repeat(Math.max(0, w)));
+        suffix.repeat("～", Math.max(0, w));
 
         // Randomly select either ! or ?
         EQMark feq = sampleExclamationQuestionByValue(s);
 
         // Since it is certain that the next token will always be either an exclamation mark
         // or a question mark, the number is adjusted by -1.
-        suffix.append(String.valueOf(feq.value).repeat(Math.max(0, e - 1)));
+        suffix.repeat(String.valueOf(Objects.requireNonNull(feq).value), Math.max(0, e - 1));
 
         // If there are consecutive exclamation marks or question marks at the end,
         // they will all be replaced with exclamation marks or question marks of the same type as feq
@@ -257,7 +258,7 @@ public class SalomeProvider implements Provider {
         List<String> l = Arrays.asList(shuffleElementsKutenToExclamation);
 logger.log(Level.TRACE, "shuffleElementsKutenToExclamation: " + l);
         Collections.shuffle(l, random);
-        return new StringResult(l.get(0), pos);
+        return new StringResult(l.getFirst(), pos);
     }
 
     //----
